hphp/hack/test/typecheck/aktuple/out_of_range_index_lvalue.php.exp
File "out_of_range_index_lvalue.php", line 11, characters 3-13:
  array<(int | string)>
File "out_of_range_index_lvalue.php", line 12, characters 15-19:
Invalid argument (Typing[4110])
File "out_of_range_index_lvalue.php", line 15, characters 22-27:
This is a string
File "out_of_range_index_lvalue.php", line 9, characters 14-14:
It is incompatible with an int
